# template_code

decompress_zlib/: CMakeLists.txt  main.cpp  zwrite_test.Z  zwrite_test_numpy_arange.Z
decompress_zlib/cpp_BAD/: compress_PIL.py  hello.z  main.cpp  zwrite_test_single_scalar.Z
decompress_zlib/z2cpp/: CMakeLists.txt  example.Z  main.cpp  z2yaml.py
npz2cpp/using_yaml/: CMakeLists.txt  example.npz  generate.py  main.cpp  npz2yaml.py
